# FunVM

./: .gitignore  CMakeLists.txt  README.md  build.bat  funvmConfig.h.in  main.c  run.sh  runTests.sh  test_funcCall.fn
common/: CMakeLists.txt  bytecode.c  bytecode.h  common.h  const_pool.c  const_pool.h  debug.c  globals.c  globals.h  hash_table.c  hash_table.h  heap.c  heap.h  memory.c  memory.h  object.c  object.h  object_pool.c  object_pool.h  source_handler.c  source_handler.h  value.c  value.h  values.c  values.h
compiler/: CMakeLists.txt  compiler.c  compiler.h  compiler_main.c  scanner.c  scanner.h
debug/: CMakeLists.txt  debug.c  debug.h
include/: common.h  memory.h
src/: CMakeLists.txt  bytecode.c  bytecode.h  common.h  compiler.c  compiler.h  constant_pool.c  constant_pool.h  funvmConfig.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  utils.c  utils.h  value.c  value.h  vm.c  vm.h
test_scripts/functional/: 01_expressions.fn  02_strings.fn  03_globalVariables.fn  04_localVariables.fn  05_ifStatement.fn  07_or.fn  09_for.fn  run.sh  test_expressions.fn  test_for.fn  test_funcCall.fn  test_funcDecl.fn  test_globalVariables.fn  test_ifStatement.fn  test_localVariables.fn  test_orAnd.fn  test_strings.fn  test_while.fn
tests/: CMakeLists.txt  compilerPanic.fn  main.fn  single_expression_test.fn  single_expression_test.fv  string_test.fv  test_scanner.c  test_simple_opcode_set.c  test_vm.c
tests/functional/: 01_expressions.fn  02_strings.fn  05_ifStatement.fn  06_and.fn  08_while.fn  10_array.fn  10_function.fn  11_closures.fn  12_native.fn  13.1_GC.fn  13.2_GC.fn  13.3_GC.fn  13_GC.fn  14.1_Classes.fn  14_Classes.fn  15.1_Inheritance.fn  15.2_Inheritance.fn  15.3_Inheritance.fn  15_Inheritance.fn  16_comments.fn
tests/native/: CMakeLists.txt  heap_realloc_test.c  heap_test.c
vm/: CMakeLists.txt  vm.c  vm.h  vm_main.c
